feat: add lib for charts and assert responsivity